[workspace]
members = ["packages/*", "contracts/psi_distributor", "contracts/nasset_token_rewards"]
# members = ["packages/*", "contracts/*"]

[profile.release.package.yield_optimizer]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
