[package]
name = "yield-optimizer-basset-farmer"
version = "0.1.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "Common yeild-optimizer types"
license = "Apache-2.0"
repository = "https://github.com/nexus/yield-optimizer-contracts"
homepage = "https://nexus.io"
documentation = "https://docs.nexus.io"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20-base = "0.6.1"
cw20 = { version = "0.6" }
yield_optimizer = { path = "../../packages/yield_optimizer", default-features = false, version = "0.1.0"}
cosmwasm-std = { version = "0.14.0" }
cosmwasm-storage = { version = "0.14.0" }
cw-storage-plus = { version = "0.6.1", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
terraswap = "2.1.0"
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-bignumber = "2.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0" }
