[package]
name = "yield-optimizer-nasset-rewards"
version = "0.1.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "Contract that calculates rewards for nAsset token holders"
license = "Apache-2.0"
repository = "https://github.com/nexus/yield-optimizer-contracts"
homepage = "https://nexus.io"
documentation = "https://docs.nexus.io"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
yield_optimizer = { path = "../../packages/yield_optimizer", default-features = false, version = "0.1.0"}
thiserror = { version = "1.0.24" }
protobuf = { version = "2", features = ["with-bytes"] }
#TODO: use from crates
cw20 = { git = "https://github.com/CosmWasm/cosmwasm-plus", branch = "main" }
cosmwasm-std = { version = "0.15", features = ["iterator"] }
cosmwasm-storage = { version = "0.15", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-bignumber = "2.1.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.15.0" }
