[package]
name = "basset-vault-psi-distributor"
version = "1.0.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "Contract for distribute PSI rewards"
license = "Apache-2.0"
repository = "https://github.com/Nexus-Protocol/basset-vault-contracts"
homepage = "todo"
documentation = "todo"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
basset-vault = { path = "../../packages/basset_vault", default-features = false, version = "1.0.0"}
thiserror = { version = "1.0.24" }
protobuf = { version = "2", features = ["with-bytes"] }
cw20 = { version = "0.8.1" }
cosmwasm-std = { version = "0.16", features = ["iterator"] }
cw-storage-plus = { version = "0.8.1" }
schemars = "0.8.3"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
cosmwasm-bignumber = "2.2.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16", features = ["iterator"] }
